# bmi2

./: Cargo.toml
src/: bmi2.rs  interface.rs  lib.rs  processing.rs  types.rs
