[package]
name = "bmi2"
description = "embedded-hal driver for the bmi270/260 IMU"
version = "0.1.1"
edition = "2021"
license = "MIT"
homepage = "https://github.com/qrasmont/bmi2"
repository = "https://github.com/qrasmont/bmi2"
readme = "README.md"
keywords = ["bmi2", "bmi270", "bmi260", "embedded-hal", "imu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1"
fixedvec = "0.2.4"
fugit = "0.3.7"
serde = { version = "1", optional = true, features = ["derive"], default-features = false }

[features]
serde = ["dep:serde"]
